# no-dp-wizard

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
no_dp_wizard/: __init__.py  __main__.py
tests/: .gitignore  fake.tsv  test_no_dp_wizard.py
