[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "no_dp_wizard"
authors = [{name = "Chuck McCallum", email = "mccallucc@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "polars>=1.32.0",
]

[project.urls]
Home = "https://github.com/mccalluc/no-dp-wizard"

[project.scripts]
wizard = "no_dp_wizard:wizard"